@@ -132,6 +132,13 @@ r <- minimaxApprox:::findRoots(x, RR, fn, FALSE)
 x <- minimaxApprox:::switchX(r, -1, 1, RR, fn, FALSE)
 expect_equal(x, control, tolerance = 3e-7) # GitHub macOS complains otherwise
 
+## Contrive no extremum examples for maximization and minimization
+R <- list(a = 0, b = 1)
+fn <- function(x) 3
+expect_equal(minimaxApprox:::switchX(0, 0, 1, R, fn, FALSE), c(0, 0))
+fn <- function(x) -3
+expect_equal(minimaxApprox:::switchX(0, 0, 1, R, fn, FALSE), c(0, 0))
+
 # Check isConverged
 errs <- c(-0.1, 0.1, -0.1)
 E <- 0.1
